--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -17,11 +17,17 @@
   </ion-tab>
 
 
-  <!-- Edit Tab -->
-  <ion-tab title="Edit" icon="icon ion-edit" href="#/tab/jobs/x">
+  <!-- Edit Tab  - hidden from display - only accessible when selecting a job -->
+  <ion-tab hidden="true" title="Edit" icon="icon ion-edit" href="#/tab/jobs/x">
     <ion-nav-view name="job-edit"></ion-nav-view>
   </ion-tab>
 
+  <!-- Barcode Tab -->
+  <ion-tab ng-if="pdaParams.experimental" title="Barcodes" icon="icon ion-ios7-barcode-outline" href="#/tab/barcodes">
+    <ion-nav-view name="barcodes-tab"></ion-nav-view>
+  </ion-tab>
+
+  <!-- Device Tab -->
   <ion-tab title="Device" icon="icon ion-edit" href="#/tab/device">
     <ion-nav-view name="device-tab"></ion-nav-view>
   </ion-tab>
