--- a/templates/tpmPdaController.html
+++ b/templates/tpmPdaController.html
@@ -60,6 +60,13 @@
 
 	</ion-list>
 
+<!--
+	<section id="registration" ng-if="TpmRowCount">
+		<button ng-click="pushRegister()">GCM Register</button>
+		<button ng-click="pushDeRegister()">GCM Unregister</button>
+	</section>
+-->
+
 	</ion-content>
 
 
