--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -23,11 +23,11 @@
 		Network connection
 	</ion-checkbox>
 
-	<ion-checkbox class="item-checkbox-right" ng-checked="{{devicectrl.IsGpsWorking}}" ng-disabled="true">
+	<ion-checkbox class="item-checkbox-right" ng-checked="{{devicectrl.isGpsWorking}}" ng-disabled="true">
 		GPS Active
 	</ion-checkbox>
 
-	<ion-checkbox class="item-checkbox-right" ng-checked="{{devicectrl.IsDeviceReady}}" ng-disabled="true">
+	<ion-checkbox class="item-checkbox-right" ng-checked="{{devicectrl.isDeviceReady}}" ng-disabled="true">
 		Device Ready
 	</ion-checkbox>
 
