--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -105,6 +105,15 @@
 		<div class="item item-divider">
 			GCM
 		</div>
+		<div class="item item-divider">
+			Polling
+		</div>
+		<ion-item class="item" >
+			Image poll count
+			<span class="item-note">
+				{{imagePollCount}}
+			</span>
+		</ion-item>
 	</span>
 
 
