--- a/templates/menu.html
+++ b/templates/menu.html
@@ -87,6 +87,11 @@
 				<ion-nav-view name="messages-tab"></ion-nav-view>
 			  </ion-tab>
 
+			  <!-- Images Tab -->
+			  <ion-tab title="Images" icon="icon ion-ios7-email" href="#/tab/images">
+				<ion-nav-view name="images-tab"></ion-nav-view>
+			  </ion-tab>
+
 			</ion-tabs>
 
 
@@ -111,6 +116,12 @@
             </ion-item>
             <ion-item menu-close href="#/tab/messages">
               Messages
+            </ion-item>
+            <ion-item menu-close href="#/tab/barcodes">
+              Barcodes
+            </ion-item>
+            <ion-item menu-close href="#/tab/images">
+              Images
             </ion-item>
 <!--
             <ion-item menu-close href="#/tab/login">
