--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -2,12 +2,21 @@
   <ion-content padding="true">
 	<ion-list>
 
+	<div class="item item-divider">
+		Driver Number: {{devicectrl.drivernum}}
+	</div>
+	<ion-item class="item item-text-wrap" >
+		<h2>** WARNING **</h2>
+		<p>Do not change any of these values unless advised by support</p>
+	</ion-item>
+<!--
 	<ion-item class="item item-icon-right">
 		Driver Number:
 		<span class="item-note">
 			{{devicectrl.drivernum}}
 		</span>
 	</ion-item>
+-->
 
 	<div class="item item-divider">
 		App properties - v{{version}}
@@ -64,7 +73,7 @@
 	</ion-checkbox>
 
 	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.jobdisplay" >
-		Job display
+		Local job display
 	</ion-checkbox>
 
 	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.debugMode" ng-change="pdaParams.setDebugMode(pdaParams.debugMode)">
