--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -76,6 +76,10 @@
 		Local job display
 	</ion-checkbox>
 
+	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.multiSelect" >
+		Multi job select
+	</ion-checkbox>
+
 	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.debugMode" ng-change="pdaParams.setDebugMode(pdaParams.debugMode)">
 		Debug Mode
 	</ion-checkbox>
