--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -103,6 +103,15 @@
 			</span>
 		</ion-item>
 		<div class="item item-divider">
+			Device Reset
+		</div>
+		<ion-item class="item item-button-right" >
+			Reset app (deletes all data)
+			<button class="button button-positive" ng-click="resetApp()">
+				Reset
+			</button>
+		</ion-item>
+		<div class="item item-divider">
 			GCM
 		</div>
 	</span>
