--- a/templates/gpsDetail.html
+++ b/templates/gpsDetail.html
@@ -56,6 +56,12 @@
            Error : {{error}}
            Error Code: {{error.code}}
     </div>       
+
+	<section id="debug" ng-if="debug">
+		<button ng-click="xxx()">BG GPS Start</button>
+		<button ng-click="yyy()">BG GPS Stop</button>
+	</section>
+
   </ion-content>
 
 </ion-view>
