--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -80,6 +80,10 @@
 		Multi job select
 	</ion-checkbox>
 
+	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.alwaysGetGPS" >
+		Always attempt foreground GPS even if logged off
+	</ion-checkbox>
+
 	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.debugMode" ng-change="pdaParams.setDebugMode(pdaParams.debugMode)">
 		Debug Mode
 	</ion-checkbox>
