--- a/templates/barcodes.html
+++ b/templates/barcodes.html
@@ -22,5 +22,7 @@
 
 	<input type="button" value="Scan" ng-click="scan()">
 
+	<input type="button" value="scan_button" ng-click="cipherscan()">
+
 	</ion-content>
 </ion-view>
