--- a/templates/jobDetailContent.html
+++ b/templates/jobDetailContent.html
@@ -15,7 +15,7 @@
 <!-- ng-include="'templates/jobDetailContentRow-ngif.html'" -->
 
 
-    	<span class="jobDetail-label"
+    	<span class="jobDetail-label" ng-if="property.value"
 	    		ng-class="{ 'alignAlmostRight': (property.index == 1) }" >
 	    	<span class="jobDetails-label" >
 					<!-- {{ property.label | debug }} -->
@@ -24,7 +24,7 @@
 	    </span>
 
 		<!-- this is the field value -->
-	    <input ng-readonly="true" ng-if="(property.type != '') && (property.type != 'toggle') && (property.type != 'enum')  && (!property.omitFromForm) " 
+	    <input ng-readonly="true" ng-if="(property.type != '') && (property.type != 'toggle') && (property.type != 'enum')  && (!property.omitFromForm) && property.value " 
 	    	ng-class="{'jobnumberspan': ((property.property == 'mobjobNumber')), 'requiredInput': ((property.required == true) && (property.value == '')),'addressfields': ((property.property == 'mobjobAddress1' || property.property == 'mobjobAddress2' || property.property == 'mobjobAddress3' || property.property == 'mobjobAddress4' || property.property == 'mobjobAddress5' || property.property == 'mobjobClientName')) , 'suburbfield': ((property.property == 'mobjobSuburb')) , 'servicefield': ((property.property == 'mobjobServiceCode')), 'centered': ((property.centered)), 'strong': ((property.strong)) }" 
 	    	type="{{property.type}}" value="{{property.value}}"
 	    	class="standardInput">
