--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -84,6 +84,10 @@
 		Always attempt foreground GPS even if logged off
 	</ion-checkbox>
 
+	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.jobDetailOneDayOnly" >
+		Query one date only
+	</ion-checkbox>
+
 	<ion-checkbox class="item-checkbox-right" ng-model="pdaParams.debugMode" ng-change="pdaParams.setDebugMode(pdaParams.debugMode)">
 		Debug Mode
 	</ion-checkbox>
@@ -119,11 +123,22 @@
 				{{appConfig.logServerIP}}:{{appConfig.logServerPort}}
 			</span>
 		</ion-item>
+<!--
 		<div class="item item-divider">
 			GCM
 		</div>
+-->
 	</span>
 
+	<div class="item item-divider">
+		Database
+	</div>
+	<ion-item class="item" >
+		Local Storage usage
+		<span class="item-note">
+			{{usedStorage}}
+		</span>
+	</ion-item>
 
 	<div class="item item-divider">
 		Network properties
