--- a/templates/deviceDetail.html
+++ b/templates/deviceDetail.html
@@ -87,7 +87,7 @@
 		<ion-item class="item" >
 			Client ID
 			<span class="item-note">
-				{{clientConfig.clientID}}
+				{{clientConfig.clientId}}
 			</span>
 		</ion-item>
 		<ion-item class="item" >
