--- a/templates/tpmPdaController.html
+++ b/templates/tpmPdaController.html
@@ -60,12 +60,10 @@
 
 	</ion-list>
 
-<!--
-	<section id="registration" ng-if="TpmRowCount">
-		<button ng-click="pushRegister()">GCM Register</button>
-		<button ng-click="pushDeRegister()">GCM Unregister</button>
+	<section id="logonoff" ng-if="TpmRowCount">
+		<button ng-click="logon()">LOGON</button>
+		<button ng-click="logoff()">LOGOFF</button>
 	</section>
--->
 
 	</ion-content>
 
