--- a/templates/jobIndex.html
+++ b/templates/jobIndex.html
@@ -7,6 +7,12 @@
   <ion-content ng-class="{ 'overflow-scroll': (desktopBrowserScrolling == true) }">
 
 	<ion-nav-buttons side="right">
+		<button class="button button-assertive" ng-show="{{ ! logonStatus }}" ng-click="logonDriver()">
+			L/OFF
+		</button>
+		<button class="button button-balanced" ng-show="{{ logonStatus }}" ng-click="logoffDriver();">
+			L/ON
+		</button>
 		<a class="button button-icon ion-ios7-email-outline" href="#/tab/messages">
 			<span class="badge badge-assertive icon-badge" ng-if="newMessageCount">{{newMessageCount}}</span>
 		</a>
