--- a/templates/jobDetailContent.html
+++ b/templates/jobDetailContent.html
@@ -57,24 +57,83 @@
 			</button>
 		</div>
 
+		<!-- ============================================================================================== -->
+		<!--  New intermediary job statuses only shown if site_config FULL_JOB_STATUSES is set -->
+		<!--   Arrive Pup -->
+<!-- not used atm
+		<div ng-if="(fullStatuses && property.enumValue.value == 'AC' && (property.legid % 100 == 0) )" class="input-label" style="width:100%;"
+					>
+			<button class="button button-positive floatLeft" ng-click="handleJobStatusChange(property.legid)"
+				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
+			>
+				Arrive Pickup
+			</button>
+		</div>
+-->
+
+		<!--   Depart Pup -->
+		<div ng-if="(fullStatuses && property.enumValue.value == 'PU' && (property.legid % 100 == 0) )" class="input-label" style="width:100%;"
+					>
+			<button class="button button-positive floatLeft" ng-click="handleJobStatusChange(property.legid)"
+				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
+			>
+				Depart Pickup
+			</button>
+		</div>
+
+		<!--   Arrive Del -->
+		<div ng-if="(fullStatuses && property.enumValue.value == 'Dp' && (property.legid % 100 == 0) )" class="input-label" style="width:100%;"
+					>
+			<button class="button button-positive floatLeft" ng-click="handleJobStatusChange(property.legid)"
+				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
+			>
+				Arrive Delivery
+			</button>
+		</div>
+
+		<!--   Depart Delivery -->
+<!-- not used atm
+		<div ng-if="(fullStatuses && property.enumValue.value == 'Ad' && (property.legid % 100 == 0) )" class="input-label" style="width:100%;"
+					>
+			<button class="button button-positive floatLeft" ng-click="handleJobStatusChange(property.legid)"
+				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
+			>
+				Depart Delivery
+			</button>
+		</div>
+-->
+		<!-- no multileg parameter or single leg job has one "tap to sign" on first leg -->
+		<div ng-if="(fullStatuses && property.enumValue.value == 'Ad' && (property.legid % 100 == 0) && (!pdaParams.multileg || property.numlegs < 2))" class="input-label" style="width:100%;">
+				<button tnf-signature-pad ng-model="signatureOne" class="floatLeft" pod-name="podname" my-key="property.legid" my-save-callback="handleJobStatusChange(property.legid,signatureOne,podname)"
+				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
+			>
+				Deliver
+            </button>
+		</div> 
+		<!-- multileg parameter has individual per leg "tap to sign" -->
+		<div ng-if="(fullStatuses && property.enumValue.value == 'Ad' && (property.legid % 100 > 0) && (pdaParams.multileg && property.numlegs > 1) )" class="input-label" style="width:100%;">
+				<button tnf-signature-pad ng-model="signatureOne" class="floatLeft" pod-name="podname" my-key="property.legid" my-save-callback="handleJobStatusChange(property.legid,signatureOne,podname)"
+				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
+			>
+				Deliver
+            </button>
+		</div> 
+		<!-- ============================================================================================== -->
 
 		<!--   PICKUP  JOB -->
 		<div ng-if="(property.enumValue.value == 'AC' && (property.legid % 100 == 0) )" class="input-label" style="width:100%;"
 					>
-
 			<button  class="button button-positive floatLeft" ng-click="handleJobStatusChange(property.legid)"
 				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
 			>
 				Pickup	
 			</button>
-
-
 		</div> 
 
 		<!--   COMPLETE JOB -->
 
 		<!-- no multileg parameter or single leg job has one "tap to sign" on first leg -->
-		<div ng-if="(property.enumValue.value == 'PU' && (property.legid % 100 == 0) && (!pdaParams.multileg || property.numlegs < 2))" class="input-label" style="width:100%;">
+		<div ng-if="(!fullStatuses && property.enumValue.value == 'PU' && (property.legid % 100 == 0) && (!pdaParams.multileg || property.numlegs < 2))" class="input-label" style="width:100%;">
 				<button tnf-signature-pad ng-model="signatureOne" class="floatLeft" pod-name="podname" my-key="property.legid" my-save-callback="handleJobStatusChange(property.legid,signatureOne,podname)"
 				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
 			>
@@ -83,7 +142,7 @@
 		</div> 
 
 		<!-- multileg parameter has individual per leg "tap to sign" -->
-		<div ng-if="(property.enumValue.value == 'PU' && (property.legid % 100 > 0) && (pdaParams.multileg && property.numlegs > 1) )" class="input-label" style="width:100%;">
+		<div ng-if="(!fullStatuses && property.enumValue.value == 'PU' && (property.legid % 100 > 0) && (pdaParams.multileg && property.numlegs > 1) )" class="input-label" style="width:100%;">
 				<button tnf-signature-pad ng-model="signatureOne" class="floatLeft" pod-name="podname" my-key="property.legid" my-save-callback="handleJobStatusChange(property.legid,signatureOne,podname)"
 				ontouchstart="window.plugins.deviceFeedback.haptic()" ontouchend="window.plugins.deviceFeedback.acoustic()"
 			>
