--- a/templates/barcodes.html
+++ b/templates/barcodes.html
@@ -1,28 +1,49 @@
 <ion-view title="Driver: ({{pdaParams.driverId}}) V: {{pdaParams.getAppVersion()}}">
 <!--
-	<ion-nav-buttons side="right">
-		<button ng-click="toggleSearchBox()" class="button button-icon ion-ios7-email-outline">
-			<span class="badge badge-assertive icon-badge">5</span>
-		</button>
+    <ion-nav-buttons side="right">
+        <button ng-click="toggleSearchBox()" class="button button-icon ion-ios7-email-outline">
+            <span class="badge badge-assertive icon-badge">5</span>
+        </button>
     </ion-nav-buttons>
 -->
-	<ion-content ng-class="{ 'overflow-scroll': (desktopBrowserScrolling == true) }">
+    <ion-content ng-class="{ 'overflow-scroll': (desktopBrowserScrolling == true) }">
 
-	<strong ng-if="barcodes.length === 0">
-		No barcodes
-	</strong>
+    <ion-list>
+        <ion-item class=barcode-item >
+            <strong >
+                {{ scan_session_id }}  
+            </strong>
+			# Matched Job(s) Items = [{{ jobsPieces }}]
+        </ion-item>
 
-	<ion-list>
-		<ion-item ng-repeat="barcode in barcodes track by $index" type="item-text-wrap">
+        <ion-item class=barcode-item ng-show="barcodes.length === 0">
+            <strong >
+                No barcodes
+            </strong>
+        </ion-item>
 
-			{{barcode}}
+        <ion-item class=barcode-item ng-repeat="barcode in barcodes track by $index" type="item-text-wrap">
 
-		</ion-item>
-	</ion-list>
+            {{barcode}}
 
-	<input type="button" value="Scan" ng-click="scan()">
+        </ion-item>
+    </ion-list>
 
-	<input type="button" value="scan_button" ng-click="cipherscan()">
+     <button ng-hide="true" tnf-signature-pad ng-model="signatureOne" class="floatLeft" pod-name="podname" my-key="property.legid" my-save-callback="barcodeSigSaveCallback(property.legid,signatureOne,podname)">
+                Deliver
+      </button>
 
-	</ion-content>
+    <div class="button-bar">
+        <button class="button button-large button-energized" ng-click="scan()">
+            Camera Scan
+        </button>
+        <button class="button button-large button-assertive" ng-click="scanCancel()">
+            Cancel
+        </button>
+        <button class="button button-large button-positive" ng-click="scanSubmit()">
+            Submit
+        </button>
+    </div>
+
+    </ion-content>
 </ion-view>
