--- a/templates/tabs.html
+++ b/templates/tabs.html
@@ -3,6 +3,8 @@
   Create tabs with an icon and label, using the tabs-positive style. 
   Each tab's child <ion-nav-view> directive will have its own 
   navigation history that also transitions its views in and out.
+
+  Some info at: https://www.thepolyglotdeveloper.com/2014/12/understanding-tabs-ionic-framework/
 -->
 <ion-tabs class="tabs-icon-top tabs-default">
 
@@ -25,7 +27,8 @@
   </ion-tab>
 
   <!-- Barcode Tab -->
-  <ion-tab ng-if="pdaParams.experimental" title="Barcodes" icon="icon ion-ios7-barcode-outline" href="#/tab/barcodes">
+  <!--<ion-tab ng-if="pdaParams.experimental" title="Barcodes" icon="icon ion-ios7-barcode-outline" href="#/tab/barcodes">-->
+  <ion-tab title="Barcodes" icon="icon ion-ios7-barcode-outline" href="#/tab/barcodes" ng-if="displayBarcodeTab">
     <ion-nav-view name="barcodes-tab"></ion-nav-view>
   </ion-tab>
 
